syntax = "proto3";

package todo.v1;

import "google/protobuf/timestamp.proto";

message Todo {
    int64 id = 1;
    string title = 2;
    string description = 3;
    google.protobuf.Timestamp reminder = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
	google.protobuf.Timestamp deleted_at = 7;
}

message CreateRequest {
    Todo todo = 1;
}

message CreateResponse {
    Todo todo = 1;
}

message ReadRequest {
    int64 id = 1;
}

message ReadResponse {
    Todo todo = 1;
}

message UpdateRequest {
    Todo todo = 1;
}

message UpdateResponse {
    Todo updated = 1;
}

message DeleteRequest {
    int64 id = 1;
}

message DeleteResponse {
    // Contains number of entities have beed deleted
    int64 deleted = 1;
}

message ReadAllRequest {}

message ReadAllResponse {
    repeated Todo todos = 1;
}

service TodoService {
    rpc Create (CreateRequest) returns (CreateResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
    rpc Read (ReadRequest) returns (ReadResponse);
    rpc ReadAll (ReadAllRequest) returns (ReadAllResponse);
    rpc Update (UpdateRequest) returns (UpdateResponse);
}
